# mtp_fixed_string

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  configure.sh
include/mtp/: fixed_string.hpp
module/: fixed_string.cppm
test/: CMakeLists.txt  fixed_string_tests.cpp
